--- a/currency-exchanger/src/assets/appSettings.json
+++ b/currency-exchanger/src/assets/appSettings.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://api.nomics.com/v1/",
+  "apiUrl": "https://api.exchangerate.host/",
   "apiKey": "bff7e581f9e78eaf3c0bcd3172964e57d097b16a"
 }
