removed api key
Signed-off-by: brahmajith <brahmajithpm@gmail.com>

--- a/currency-exchanger/src/assets/appSettings.json
+++ b/currency-exchanger/src/assets/appSettings.json
@@ -1,4 +1,3 @@
 {
-  "apiUrl": "https://api.exchangerate.host/",
-  "apiKey": "bff7e581f9e78eaf3c0bcd3172964e57d097b16a"
+  "apiUrl": "https://api.exchangerate.host/"
 }
